[package]
name = "flask"
version = "0.1.0"
authors = ["Egidijus Lileika <lileikaa@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
wasm-bindgen = "0.2.83"
js-sys = "0.3.60"
num-traits = "0.2.14"
num-derive = "0.3.3"
num_enum = "0.5.7"
png = "0.16.8"
lazy_static = "1.4.0"

[dependencies.web-sys]
version = "0.3.60"
features = [
    'Document',
    'Element',
    'HtmlCanvasElement',
    'HtmlElement',
    'MouseEvent',
    'KeyboardEvent',
    'Window',
    'WebGlBuffer',
    'WebGl2RenderingContext',
    'WebGlProgram',
    'WebGlShader',
    'WebGlTexture',
    'WebGlUniformLocation',
    'WebGlVertexArrayObject',
    'console',
    'Event',
]
